--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -555,9 +555,13 @@ $ source /rockchip-test/gpu/test_fullscreen_glmark2.sh
 **K8 GPU性能测试结果**
 
 ```
+$ source /rockchip-test/gpu/test_fullscreen_glmark2.sh
+=======================================================
+                                  glmark2 Score: 676 
+=======================================================
 ```
 
-
+>接入HDMI1 OUT0
 
 
 
