--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -350,61 +350,16 @@ Rockchip Debian 12 文件系统内置 glmark2-es 性能测试工具
 source /rockchip-test/gpu/test_fullscreen_glmark2.sh
 ```
 
-接入mipi 800x1280 屏测试结果
+
 
 ```
-#  source /rockchip-test/gpu/test_fullscreen_glmark2.sh
-run glmark2 x11 with fullscreen......
-arm_release_ver: g13p0-01eac0, rk_so_ver: 10
-=======================================================
-    glmark2 2023.01
-=======================================================
-    OpenGL Information
-    GL_VENDOR:      ARM
-    GL_RENDERER:    Mali-G52
-    GL_VERSION:     OpenGL ES 3.2 v1.g13p0-01eac0.0fd2effaec483a5f4c440d2ffa25eb7a
-    Surface Config: buf=32 r=8 g=8 b=8 a=8 depth=24 stencil=0 samples=0
-    Surface Size:   800x1280 fullscreen
-=======================================================
-[build] use-vbo=false: FPS: 410 FrameTime: 2.441 ms
-[build] use-vbo=true: FPS: 441 FrameTime: 2.268 ms
-[texture] texture-filter=nearest: FPS: 459 FrameTime: 2.181 ms
-[texture] texture-filter=linear: FPS: 463 FrameTime: 2.162 ms
-[texture] texture-filter=mipmap: FPS: 479 FrameTime: 2.090 ms
-[shading] shading=gouraud: FPS: 398 FrameTime: 2.513 ms
-[shading] shading=blinn-phong-inf: FPS: 407 FrameTime: 2.458 ms
-[shading] shading=phong: FPS: 371 FrameTime: 2.696 ms
-[shading] shading=cel: FPS: 361 FrameTime: 2.776 ms
-[bump] bump-render=high-poly: FPS: 278 FrameTime: 3.602 ms
-[bump] bump-render=normals: FPS: 444 FrameTime: 2.255 ms
-[bump] bump-render=height: FPS: 433 FrameTime: 2.310 ms
-[effect2d] kernel=0,1,0;1,-4,1;0,1,0;: FPS: 343 FrameTime: 2.919 ms
-[effect2d] kernel=1,1,1,1,1;1,1,1,1,1;1,1,1,1,1;: FPS: 187 FrameTime: 5.376 ms
-[pulsar] light=false:quads=5:texture=false: FPS: 470 FrameTime: 2.130 ms
-[desktop] blur-radius=5:effect=blur:passes=1:separable=true:windows=4: FPS: 197 FrameTime: 5.101 ms
-[desktop] effect=shadow:windows=4: FPS: 353 FrameTime: 2.841 ms
-[buffer] columns=200:interleave=false:update-dispersion=0.9:update-fraction=0.5:update-method=map: FPS: 178 FrameTime: 5.627 ms
-[buffer] columns=200:interleave=false:update-dispersion=0.9:update-fraction=0.5:update-method=subdata: FPS: 179 FrameTime: 5.613 ms
-[buffer] columns=200:interleave=true:update-dispersion=0.9:update-fraction=0.5:update-method=map: FPS: 224 FrameTime: 4.473 ms
-[ideas] speed=duration: FPS: 291 FrameTime: 3.444 ms
-[jellyfish] <default>: FPS: 241 FrameTime: 4.160 ms
-[terrain] <default>: FPS: 56 FrameTime: 17.903 ms
-[shadow] <default>: FPS: 206 FrameTime: 4.876 ms
-[refract] <default>: FPS: 79 FrameTime: 12.742 ms
-[conditionals] fragment-steps=0:vertex-steps=0: FPS: 441 FrameTime: 2.271 ms
-[conditionals] fragment-steps=5:vertex-steps=0: FPS: 376 FrameTime: 2.662 ms
-[conditionals] fragment-steps=0:vertex-steps=5: FPS: 443 FrameTime: 2.261 ms
-[function] fragment-complexity=low:fragment-steps=5: FPS: 414 FrameTime: 2.417 ms
-[function] fragment-complexity=medium:fragment-steps=5: FPS: 342 FrameTime: 2.928 ms
-[loop] fragment-loop=false:fragment-steps=5:vertex-steps=5: FPS: 412 FrameTime: 2.432 ms
-[loop] fragment-steps=5:fragment-uniform=false:vertex-steps=5: FPS: 411 FrameTime: 2.436 ms
-[loop] fragment-steps=5:fragment-uniform=true:vertex-steps=5: FPS: 368 FrameTime: 2.722 ms
+$ source /rockchip-test/gpu/test_fullscreen_glmark2.sh
 =======================================================
                                   glmark2 Score: 337 
 =======================================================
 ```
 
-> 测试分数为 337
+> 接入mipi 800x1280 屏测试结果，测试分数为 337
 
 
 
