--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -561,7 +561,7 @@ $ source /rockchip-test/gpu/test_fullscreen_glmark2.sh
 =======================================================
 ```
 
->接入HDMI1 OUT0
+>接入HDMI1 OUT0，测试结果为 676
 
 
 
