--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -328,6 +328,22 @@ KICKPI-K2C设计有1路485（/dev/ttyAS3）一路232(/dev/ttyAS4)
 # microcom -s 115200 /dev/ttyAS3
 ```
 
+使用minicom验证：
+
+接收的内容会打印出来，发送的内容无打印
+
+```shell
+# microcom -b 9600 -D /dev/ttyAS3
+```
+
+> crt+A 进入控制 B-Z命令  Z为help
+
+> | Ctrl+A X | 退出程序                        |
+> | -------- | ------------------------------- |
+> | Ctrl+A W | 启用/禁用自动换行，默认禁用     |
+> | Ctrl+A E | **启用/禁用输入显示**，默认禁用 |
+> | Ctrl+A C | 清屏                            |
+
 或者使用echo直接发送，没有设置波特率默认9600
 
 ```shell
