--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -344,7 +344,7 @@ KICKPI-K2C设计有1路485（/dev/ttyAS3）一路232(/dev/ttyAS4)
 > | Ctrl+A E | **启用/禁用输入显示**，默认禁用 |
 > | Ctrl+A C | 清屏                            |
 
-如果退出不正常：minicom -s 将 Serial port setup>> F   Hardware Flow Control 关掉
+如果退出后串口被不正常占用：minicom -s 将 Serial port setup>> F   Hardware Flow Control 关掉
 
 或者使用echo直接发送，没有设置波特率默认9600
 
