--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -629,7 +629,7 @@ Begin perf ...
 检测结果直接输出到显示屏上，所以需要连接显示屏才能看到结果
 
 ```
-$ source /rockchip_test/npu2/
+$ source /rockchip_test/npu2/npu_stress_test.sh
 ```
 
 
