--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -573,6 +573,11 @@ RK3568 配备0.8T算力NPU单元
 
 查看NPU使用情况
 
+```
+$ watch sudo cat /sys/kernel/debug/rknpu/load
+$ cat /sys/kernel/debug/rknpu/load
+```
+
 
 
 
