--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -335,7 +335,7 @@ KICKPI-K2C设计有1路485（/dev/ttyAS3）一路232(/dev/ttyAS4)
 接收的内容会打印出来，发送的内容无打印
 
 ```shell
-# microcom -b 9600 -D /dev/ttyAS3
+# minicom -b 9600 -D /dev/ttyAS3
 ```
 
 > crt+A 进入控制 B-Z命令  Z为help
