--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -613,21 +613,14 @@ Begin perf ...
 0.000000 - 1
 ```
 
-> 日志解析：
+> 在 `Begin perf...` 后的内容展示了模型多次运行的性能数据：
 >
-> 以下为
+> - 每次记录了运行的序号以及对应的耗时（`Elapse Time`）和每秒处理帧数（`FPS`）。例如，`0: Elapse Time = 2.85ms, FPS = 351.12`表示第 1 次运行模型推理时，总共花费了 2.85 毫秒的时间，由此计算出每秒可以处理 351.12 帧的数据（FPS 的计算方式就是 1000 除以每次的耗时，单位换算后得到每秒的帧数）。
 >
-> Begin perf ...
->    0: Elapse Time = 4.95ms, FPS = 201.82
->    1: Elapse Time = 4.84ms, FPS = 206.61
->    2: Elapse Time = 4.86ms, FPS = 205.85
->    3: Elapse Time = 4.79ms, FPS = 208.68
->    4: Elapse Time = 4.82ms, FPS = 207.47
->    5: Elapse Time = 4.82ms, FPS = 207.25
->    6: Elapse Time = 4.81ms, FPS = 207.77
->    7: Elapse Time = 4.82ms, FPS = 207.25
->    8: Elapse Time = 4.82ms, FPS = 207.34
->    9: Elapse Time = 4.82ms, FPS = 207.60
+> `---- Top5 ----` 部分呈现了模型推理输出结果中概率排名前 5 的类别及其对应的概率值和类别编号：
+>    
+>    - `0.935059 - 156`表示模型认为输入的数据（比如可能是一张图像）最有可能属于编号为 156 的类别，其对应的概率高达 0.935059，这个概率值相对较高，说明模型对该判断有比较高的置信度。
+>    - 后续的`0.057037 - 155`、`0.003881 - 205`、`0.003119 - 284`、`0.000172 - 285`分别列出了概率排名第 2 到第 5 的类别编号及其概率值，这些概率值依次递减，表明模型对它们属于相应类别判断的把握程度也逐渐降低。
 
 
 
