--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -627,6 +627,8 @@ Begin perf ...
 K8 NPU 压力测试结果
 
 ```
+$ source /rockchip-test/npu2/npu_stress_test.sh
+...
 Begin perf ...
    0: Elapse Time = 2.32ms, FPS = 431.97
    1: Elapse Time = 2.29ms, FPS = 437.64
@@ -641,9 +643,7 @@ Begin perf ...
 ---- Top5 ----
 0.984375 - 156
 0.007812 - 155
-0.003906 - 205
-0.000000 - 0
-0.000000 - 1
+...
 ```
 
 >接入HDMI_OUT0
