--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -624,7 +624,7 @@ Begin perf ...
 
 
 
-K8 NPU 压力测试结果
+**K8 NPU 压力测试结果**
 
 ```
 $ source /rockchip-test/npu2/npu_stress_test.sh
@@ -648,7 +648,7 @@ Begin perf ...
 
 >接入HDMI_OUT0
 >
->从信息可知平均每秒处理 450 帧的数据
+>从打印信息可知平均每秒处理 450 帧的数据
 
 
 
