--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -626,6 +626,8 @@ Begin perf ...
 
 **K8 NPU 压力测试结果**
 
+接入HDMI_OUT0
+
 ```
 $ source /rockchip-test/npu2/npu_stress_test.sh
 ...
@@ -646,8 +648,6 @@ Begin perf ...
 ...
 ```
 
->接入HDMI_OUT0
->
 >从打印信息可知平均每秒处理 450 帧的数据
 
 
