--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -506,7 +506,7 @@ $ mpi_enc_test -w 4096 -h 2160 -t 7 -o ./test.h264 -n 100
 耗时 4.539s
 
 ```
-root@linaro-alip:/data# time mpi_enc_test -w 4096 -h 2160 -t 7 -o ./test.h264 -n 100
+root@linaro-alip:/$ time mpi_enc_test -w 4096 -h 2160 -t 7 -o ./test.h264 -n 100
 
 real    0m4.539s
 user    0m0.601s
