--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -711,7 +711,7 @@ $ mpi_dec_test -t 7 -i test.h264 -n 100
 * 解码H.265视频测试
 
 ```
-$ mpi_dec_test -t 16777220 -i test.h265 -n 10
+$ mpi_dec_test -t 16777220 -i test.h265 -n 100
 ```
 
 
@@ -719,7 +719,9 @@ $ mpi_dec_test -t 16777220 -i test.h265 -n 10
 K8 编解码测试结果
 
 ```
-44.65
+编码H.264 4096x2160 100帧测试 fps 44.65
+编码H.265 4096x2160 100帧测试 fps 45.53
+
 ```
 
 
