--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -721,8 +721,8 @@ K8 编解码测试结果
 ```
 编码H.264 4096x2160 100帧测试 fps 44.65
 编码H.265 4096x2160 100帧测试 fps 45.53
-解码H.264视频测试
-解码H.265视频测试
+解码H.264视频100帧测试 
+解码H.265视频100帧测试 390.56
 ```
 
 
