--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -348,9 +348,11 @@ KICKPI-K2C设计有1路485（/dev/ttyAS3）一路232(/dev/ttyAS4)
 
 如果退出后串口被不正常占用：minicom -s 将 Serial port setup>> F   Hardware Flow Control 关掉
 
-或者使用echo直接发送，没有设置波特率默认9600
+或者使用echo直接发送
 
 ```shell
+#stty -F /dev/ttyAS3 -a 	//可以看默认波特率
+#stty -F /dev/ttyAS3 115200 	//可以设置
 # echo "123" > /dev/ttyAS3
 ```
 
