--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -48,10 +48,10 @@ $ echo 1 > /sys/class/leds/work-led/brightness
 $ echo 0 > /sys/class/leds/work-led/brightness
 ```
 
-
+恢复心跳模式
 
 ```
-echo none > /sys/class/leds/work-led/trigger
+$ echo none > /sys/class/leds/work-led/trigger
 ```
 
 
