--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -558,7 +558,7 @@ $ source /rockchip-test/gpu/test_fullscreen_glmark2.sh
 
 
 
-**K8 GPU性能测试结果**
+**K8 测试结果**
 
 ```
 $ source /rockchip-test/gpu/test_fullscreen_glmark2.sh
