--- a/rk356x/zh/14-硬件老化测试.md
+++ b/rk356x/zh/14-硬件老化测试.md
@@ -87,5 +87,7 @@ $ source /rockchip-test/auto_reboot/auto_reboot.sh
 
 ```
 $ vi /rockchip-test/auto_reboot/auto_reboot.sh
+delay=8
++delay=15
 ```
 
