--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -6,9 +6,17 @@
 
 ## 1. 扩展引脚
 
+### K2B 20PIN引脚图
+
 开发板配备20Pin扩展引脚，其中包含普通GPIO、I2C、UART、SPI等接口。
 
 ![image-20240319154848492](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240319154848492.png)
+
+### K2C 20PIN引脚图
+
+开发板配备20Pin扩展引脚，其中包含普通GPIO、I2C、UART、SPI等接口。
+
+![image-20241226150250087](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241226150250087.png)
 
 
 
