--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1080,26 +1080,9 @@ $ arecord -D hw:1,0 a.wav -r 48000 -f S16_LE -d 5 -c 2
 
 
 
-## 25. 网络
+## 25. 以太网
 
 
-
-```
-iperf --version
-```
-
-
-
-
-
-使用 iperf 工具进行测试
-
-```
-PC端： 
-$ .\iperf2.exe -c 192.168.137.122 -b 1000M -t 10 -i 1 -u -R
-主板端：
-$ ipef
-```
 
 
 
