--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1090,5 +1090,69 @@ $ ifconfig
 
 ## 26. CAN
 
+**CAN** 常⽤命令接口
 
+1. 查询当前⽹络设备:
+
+   ```
+   $ ifconfig -a
+   ```
+
+2. CAN启动:
+
+关闭CAN:
+
+```
+$ ip link set can0 down
+```
+
+设置⽐特率500KHz:
+
+```
+$ ip link set can0 type can bitrate 500000
+```
+
+
+
+
+
+打印can0信息:
+
+```
+$ ip -details -statistics link show can0
+```
+
+
+
+
+
+启动CAN:
+
+ip link set can0 up
+
+3. CAN发送:
+
+发送（标准帧,数据帧,ID:123,date:DEADBEEF）:
+
+cansend can0 123#DEADBEEF
+
+发送（标准帧,远程帧,ID:123）:
+
+cansend can0 123#R
+
+BR2_PACKAGE_CAN_UTILS=y
+
+BR2_PACKAGE_IPROUTE2=y发送（扩展帧,数据帧,ID:00000123,date:DEADBEEF）:
+
+cansend can0 00000123#12345678
+
+发送（扩展帧,远程帧,ID:00000123）:
+
+cansend can0 00000123#R
+
+3. CAN接收:
+
+开启打印，等待接收:
+
+candump can0
 
