--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1092,13 +1092,13 @@ $ ifconfig
 
 **CAN** 常⽤命令接口
 
-1. 查询当前⽹络设备:
+查询当前⽹络设备:
 
-   ```
-   $ ifconfig -a
-   ```
+```
+$ ifconfig -a
+```
 
-2. CAN启动:
+CAN启动:
 
 关闭CAN:
 
