--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1092,13 +1092,13 @@ $ ifconfig
 
 **CAN** 常⽤命令接口
 
-查询当前⽹络设备:
+**查询当前⽹络设备**
 
 ```
 $ ifconfig -a
 ```
 
-CAN启动:
+**CAN启动**
 
 关闭CAN:
 
@@ -1112,21 +1112,18 @@ $ ip link set can0 down
 $ ip link set can0 type can bitrate 500000
 ```
 
-
-
-
-
 打印can0信息:
 
 ```
 $ ip -details -statistics link show can0
 ```
 
+启动CAN
+
+```
+```
 
 
-
-
-启动CAN:
 
 ip link set can0 up
 
