--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1121,17 +1121,16 @@ $ ip -details -statistics link show can0
 启动CAN
 
 ```
+$ ip link set can0 up
 ```
 
-
-
-ip link set can0 up
-
-3. CAN发送:
+**CAN发送**
 
 发送（标准帧,数据帧,ID:123,date:DEADBEEF）:
 
-cansend can0 123#DEADBEEF
+```
+$ cansend can0 123#DEADBEEF
+```
 
 发送（标准帧,远程帧,ID:123）:
 
