--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1132,9 +1132,15 @@ $ ip link set can0 up
 $ cansend can0 123#DEADBEEF
 ```
 
-发送（标准帧,远程帧,ID:123）:
+发送（标准帧,远程帧,ID:123）
 
-cansend can0 123#R
+```
+$ cansend can0 123#R
+```
+
+
+
+
 
 BR2_PACKAGE_CAN_UTILS=y
 
