--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1144,7 +1144,9 @@ $ cansend can0 123#R
 
 BR2_PACKAGE_CAN_UTILS=y
 
-BR2_PACKAGE_IPROUTE2=y发送（扩展帧,数据帧,ID:00000123,date:DEADBEEF）:
+BR2_PACKAGE_IPROUTE2=y
+
+发送（扩展帧,数据帧,ID:00000123,date:DEADBEEF）:
 
 cansend can0 00000123#12345678
 
