--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1138,25 +1138,27 @@ $ cansend can0 123#DEADBEEF
 $ cansend can0 123#R
 ```
 
-
-
-
-
-BR2_PACKAGE_CAN_UTILS=y
-
-BR2_PACKAGE_IPROUTE2=y
-
 发送（扩展帧,数据帧,ID:00000123,date:DEADBEEF）:
 
-cansend can0 00000123#12345678
+```
+$ cansend can0 00000123#12345678
+```
 
-发送（扩展帧,远程帧,ID:00000123）:
+发送（扩展帧,远程帧,ID:00000123）
 
-cansend can0 00000123#R
+```
+$ cansend can0 00000123#R
+```
 
-3. CAN接收:
+**CAN接收**
 
-开启打印，等待接收:
+开启打印，等待接收
 
+```
 candump can0
+```
+
+
+
+
 
