--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1161,10 +1161,26 @@ $ cansend can0 00000123#R
 开启打印，等待接收
 
 ```
-candump can0
+$ candump can0
 ```
 
 
+
+**回环模式测试**
+
+启动can后，io输⼊命令开启回环⾃测（基地址根据实际dts启动的can配置）：
+
+
+
+```
+$ io -4 0xfea60000 0x8415
+```
+
+
+
+
+
+回环模式下，cansend后candump可以接收，说明控制器⼯作正常。
 
 
 
