--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1168,15 +1168,13 @@ $ candump can0
 
 **回环模式测试**
 
-启动can后，io输⼊命令开启回环⾃测（基地址根据实际dts启动的can配置）：
-
-
+启动can后，io输⼊命令开启回环⾃测（基地址根据实际dts启动的can配置）
 
 ```
 $ io -4 0xfea60000 0x8415
 ```
 
-
+>0xfea60000
 
 
 
