--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1174,11 +1174,13 @@ $ candump can0
 $ io -4 0xfea60000 0x8415
 ```
 
->0xfea60000
+>0xfea60000 为 K8 CAN1 的 dts 节点
 
 
 
-回环模式下，cansend后candump可以接收，说明控制器⼯作正常。
+回环模式下，cansend 后 candump 可以接收，说明控制器⼯作正常。
+
+>
 
 
 
