--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1180,7 +1180,11 @@ $ io -4 0xfea60000 0x8415
 
 回环模式下，cansend 后 candump 可以接收，说明控制器⼯作正常。
 
->
+>root@linaro-alip:/# io -4 0xfea60000 0x8415
+>root@linaro-alip:/# candump can0
+>  can0  123   [4]  DE AD BE EF
+
+
 
 
 
