--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1183,6 +1183,12 @@ $ io -4 0xfea60000 0x8415
 >root@linaro-alip:/# io -4 0xfea60000 0x8415
 >root@linaro-alip:/# candump can0
 >  can0  123   [4]  DE AD BE EF
+>
+>
+>
+>root@linaro-alip:/# cansend can0 123#DEADBEEF
+
+
 
 
 
