--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1197,7 +1197,12 @@ $ io -4 0xfea60000 0x8415
 ## 27. SPI
 
 ```
-$ tools/spi/spidev_test.c
+kernel/tools/spi/spidev_test.c
+```
+
+
+
+```
 ```
 
 
