--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1180,17 +1180,19 @@ $ io -4 0xfea60000 0x8415
 
 回环模式下，cansend 后 candump 可以接收，说明控制器⼯作正常。
 
->示例：
->
->终端1：
->
->root@linaro-alip:/# io -4 0xfea60000 0x8415
->root@linaro-alip:/# candump can0
->  can0  123   [4]  DE AD BE EF
->
->终端2：
->
->root@linaro-alip:/# cansend can0 123#DEADBEEF
+
+
+**示例**
+
+终端1：
+
+root@linaro-alip:/# io -4 0xfea60000 0x8415
+root@linaro-alip:/# candump can0
+  can0  123   [4]  DE AD BE EF
+
+终端2：
+
+root@linaro-alip:/# cansend can0 123#DEADBEEF
 
 
 
@@ -1204,5 +1206,5 @@ $ io -4 0xfea60000 0x8415
 $ spidev_test -D /dev/spidev0.0 -v -l -p "hello"
 ```
 
-
+> 主控做Master端，
 
