--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1184,15 +1184,25 @@ $ io -4 0xfea60000 0x8415
 
 **示例**
 
-终端1：
+- 终端1
 
+开启回环模式测试，并监听 can
+
+```
 root@linaro-alip:/# io -4 0xfea60000 0x8415
 root@linaro-alip:/# candump can0
   can0  123   [4]  DE AD BE EF
+```
 
-终端2：
 
+
+- 终端2
+
+发送命令
+
+```
 root@linaro-alip:/# cansend can0 123#DEADBEEF
+```
 
 
 
