--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1216,5 +1216,9 @@ root@linaro-alip:/# cansend can0 123#DEADBEEF
 $ spidev_test -D /dev/spidev0.0 -v -l -p "hello"
 ```
 
-> 主控做Master端，
+> 主控做Master端
+>
+> 
+
+
 
