--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1222,3 +1222,14 @@ $ spidev_test -D /dev/spidev0.0 -v -l -p "hello"
 
 
 
+- 示例
+
+```
+root@linaro-alip:/data# ./spidev_test -D /dev/spidev0.0 -v -l -p "hello"
+spi mode: 0x24
+bits per word: 8
+max speed: 500000 Hz (500 kHz)
+TX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __  |hello|
+RX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __  |hello|
+```
+
