--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1208,6 +1208,18 @@ root@linaro-alip:/# cansend can0 123#DEADBEEF
 
 ## 27. SPI
 
+**工具位置**
+
+```
+kernel/tools/spi/spidev_test.c
+```
+
+
+
+**编译**
+
+
+
 
 
 **回环模式测试**
