--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1218,7 +1218,10 @@ kernel/tools/spi/spidev_test.c
 
 **编译**
 
-
+```
+make CROSS_COMPILE=~/path-to-toolchain/gcc-xxxxx-toolchain/bin/xxxx-linux-gnu-
+# 选择 kernel 所⽤ CROSS_COMPILE
+```
 
 
 
