--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1211,7 +1211,7 @@ root@linaro-alip:/# cansend can0 123#DEADBEEF
 **工具位置**
 
 ```
-kernel/tools/spi/spidev_test.c
+$ kernel/tools/spi/spidev_test.c
 ```
 
 
@@ -1219,9 +1219,10 @@ kernel/tools/spi/spidev_test.c
 **编译**
 
 ```
-make CROSS_COMPILE=~/path-to-toolchain/gcc-xxxxx-toolchain/bin/xxxx-linux-gnu-
-# 选择 kernel 所⽤ CROSS_COMPILE
+$ make CROSS_COMPILE=~/path-to-toolchain/gcc-xxxxx-toolchain/bin/xxxx-linux-gnu-
 ```
+
+> 选择 kernel 所⽤ CROSS_COMPILE
 
 
 
