--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1101,7 +1101,7 @@ enP4p65s0: flags=4099<UP,BROADCAST,MULTICAST>  mtu 1500
         device interrupt 179  base 0x1000  
 ```
 
-
+>网络接口名称根据实际情况会有所不同
 
 
 
