--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1086,6 +1086,8 @@ $ arecord -D hw:1,0 a.wav -r 48000 -f S16_LE -d 5 -c 2
 
 ```
 $ ifconfig 
+或
+$ ifconfig -a
 enP3p49s0: flags=4099<UP,BROADCAST,MULTICAST>  mtu 1500
         ether 82:76:b8:2f:96:6d  txqueuelen 1000  (Ethernet)
         RX packets 0  bytes 0 (0.0 B)
