--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1082,7 +1082,7 @@ $ arecord -D hw:1,0 a.wav -r 48000 -f S16_LE -d 5 -c 2
 
 ## 25. 以太网
 
-**显示全部网络接口信息**
+**显示所有网络接口信息**
 
 ```
 $ ifconfig 
@@ -1107,6 +1107,8 @@ enP4p65s0: flags=4099<UP,BROADCAST,MULTICAST>  mtu 1500
 ```
 
 >网络接口名称根据实际情况会有所不同
+
+
 
 
 
