--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1110,7 +1110,15 @@ enP4p65s0: flags=4099<UP,BROADCAST,MULTICAST>  mtu 1500
 
 
 
+**显示特定网络接口信息**
 
+```
+$ ifconfig enP4p65s0
+```
+
+
+
+要显示特定网络接口（如`eth0`）的信息，可输入`ifconfig eth0`。
 
 
 
