--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1123,10 +1123,14 @@ $ ifconfig <dev>
 **设置 IP 地址**
 
 ```
-$ 
+$ ifconfig eth0 <ip> netmask <nmask>
 ```
 
 > 要为`eth0`接口设置 IP 地址为`192.168.1.101`，子网掩码为`255.255.255.0`，可以使用命令`ifconfig eth0 192.168.1.101 netmask 255.255.255.0`
+
+
+
+
 
 
 
