--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1132,9 +1132,17 @@ $ ifconfig eth0 <ip> netmask <nmask>
 
 **启用网络接口**
 
+```
+$ ifconfig eth0 up
+```
+
 
 
 **禁用网络接口**
+
+```
+$ ifconfig eth0 down
+```
 
 
 
