--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1133,15 +1133,17 @@ $ ifconfig eth0 <ip> netmask <nmask>
 **启用网络接口**
 
 ```
-$ ifconfig eth0 up
+$ ifconfig <dev> up
 ```
+
+> 若要启用`eth0`接口，可以使用`ifconfig eth0 up`命令
 
 
 
 **禁用网络接口**
 
 ```
-$ ifconfig eth0 down
+$ ifconfig <dev> down
 ```
 
 
