--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1153,9 +1153,9 @@ $ ifconfig <dev> down
 **设置 MAC 地址**
 
 ```
-$ ifconfig eth0 down
-$ ifconfig eth0 hw ether <新的MAC地址>
-$ ifconfig eth0 up
+$ ifconfig <dev> down
+$ ifconfig <dev> hw ether <新的MAC地址>
+$ ifconfig <dev> up
 ```
 
 > 不同的操作系统可能会有一些差异，有些系统可能不允许通过`ifconfig`直接设置 MAC 地址，或者需要额外的步骤
