--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -2,11 +2,19 @@
 
 
 
-## 扩展引脚 <a name="扩展引脚"></a>
+## K5扩展引脚 
 
 开发板配备20Pin扩展引脚，其中包含普通GPIO、I2C、UART、SPI等接口。
 
 ![image-20241009150239258](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241009150239258.png)
+
+## K5Ck扩展引脚
+
+
+
+
+
+
 
 
 
