--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -49,7 +49,7 @@ $ echo 0 > /sys/class/leds/work-led/brightness
 恢复心跳模式
 
 ```
-$ echo none > /sys/class/leds/work-led/trigger
+$ echo hearbeat > /sys/class/leds/work-led/trigger
 ```
 
 
