--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -201,14 +201,18 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 ### 普通串口使用
 
+1. 确认使用的串口号
+
+2. 查看对应的节点是否存在
+
 ```
 $ ls /dev/ttyS*
 ```
 
-
+3. 使用 microcom 进行通信测试
 
 ```
- microcom -s 115200 /dev/ttyS4
+$ microcom -s 115200 /dev/ttyS4
 ```
 
 
