--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -295,7 +295,14 @@ $ echo 1 > /sys/class/pwm/pwmchip0/pwm0/enable
 
 确认 pwmchip 对应的 pwm
 
+```
+$ find /sys/devices/ | grep pwmchip | grep uevent
+/sys/devices/platform/fd8b0020.pwm/pwm/pwmchip1/uevent
+/sys/devices/platform/fd8b0010.pwm/pwm/pwmchip0/uevent
+/sys/devices/platform/fd8b0030.pwm/pwm/pwmchip2/uevent
+```
 
+>fd8b0010.pwm
 
 
 
