--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -326,7 +326,7 @@ K1开发板 配备RTL8822CS高性能WIFI模块
 
 ### 设置wifi热点（AP）模式
 
-查看是否支持AP模式
+**查看是否支持AP模式**
 
 ```
 $ iw list | grep AP
@@ -348,6 +348,8 @@ Device supports AP-side u-APSD.
 ```
 
 > AP/VLAN则可以表示硬件支持
+
+
 
 
 
