--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -40,7 +40,7 @@
 
 若想要实现命令控制LED状态的话，可通过以下命令设置为none，然后再设置LED的brightness
 
-```
+```bash
 $ echo none > /sys/class/leds/work-led/trigger
 $ echo 1 > /sys/class/leds/work-led/brightness
 $ echo 0 > /sys/class/leds/work-led/brightness
