--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -58,7 +58,7 @@ $ echo heartbeat > /sys/class/leds/work-led/trigger
 
 K1开发板的扩展40Pin引脚中默认有9路可控GPIO。
 
-首先，通过 [扩展引脚](ExpansionPin)章节，确认GPIO引脚位置、编号，参考以下步骤可对指定GPIO进行状态控制。
+首先，通过 [扩展引脚](#ExpansionPin)章节，确认GPIO引脚位置、编号，参考以下步骤可对指定GPIO进行状态控制。
 
 ### PIN 脚计算
 
