--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -60,15 +60,6 @@ K1开发板的扩展40Pin引脚中默认有9路可控GPIO。
 
 首先，通过 [扩展引脚](#ExpansionPin)章节，确认GPIO引脚位置、编号，参考以下步骤可对指定GPIO进行状态控制。
 
-### PIN 脚计算
-
-GPIO1-D0 (gpio1-24)为例：
-
-```
-每组GPIO有32位：0-32
-A（0-7）B（8-15）C（16-23）D（24-31）
-```
-
 
 
 ### sys gpio控制
@@ -79,7 +70,18 @@ A（0-7）B（8-15）C（16-23）D（24-31）
 
 
 
-步骤一
+**PIN 脚计算**
+
+GPIO1-D0 (gpio1-24)为例：
+
+```
+每组GPIO有32位：0-32
+A（0-7）B（8-15）C（16-23）D（24-31）
+```
+
+
+
+**步骤一**
 
 先将对应GPIO引脚注释，/sys/class/gpio/export 只能导入未注册的 gpio
 
@@ -93,13 +95,13 @@ kernel-5.10/arch/arm64/boot/dts/rockchip/
 20pin:	rk3568-kickpi-extend-20pin.dtsi
 ```
 
-步骤二
+**步骤二**
 
 ​		编译镜像，重新烧录
 
 
 
-步骤三
+**步骤三**
 
 ​		确认gpio未被注册
 
@@ -109,7 +111,7 @@ cat /sys/kernel/debug/pinctrl/pinctrl-rockchip-pinctrl/pinmux-pins
 
 未注册如下：pin 56 (gpio1-24): (MUX UNCLAIMED) (GPIO UNCLAIMED)
 
-步骤四
+**步骤四**
 
 ​		通过 /sys/class/gpio/export 注册 56并进行控制
 
