--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -79,8 +79,6 @@ GPIO1-D0 (gpio1-24)为例：
 A（0-7）B（8-15）C（16-23）D（24-31）
 ```
 
-
-
 **步骤一**
 
 先将对应GPIO引脚注释，/sys/class/gpio/export 只能导入未注册的 gpio
@@ -99,8 +97,6 @@ kernel-5.10/arch/arm64/boot/dts/rockchip/
 
 ​		编译镜像，重新烧录
 
-
-
 **步骤三**
 
 ​		确认gpio未被注册
@@ -109,7 +105,7 @@ kernel-5.10/arch/arm64/boot/dts/rockchip/
 cat /sys/kernel/debug/pinctrl/pinctrl-rockchip-pinctrl/pinmux-pins
 ```
 
-未注册如下：pin 56 (gpio1-24): (MUX UNCLAIMED) (GPIO UNCLAIMED)
+> 未注册如下：pin 56 (gpio1-24): (MUX UNCLAIMED) (GPIO UNCLAIMED)
 
 **步骤四**
 
