--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -77,7 +77,7 @@ GPIO1-D0 (gpio1-24)为例：
 A（0-7）B（8-15）C（16-23）D（24-31）
 ```
 
-PIN num = 32 * ( 2 - 1 ) + 24 = 
+PIN num = 32 * ( 2 - 1 ) + 24 = 56
 
 **步骤一**
 
