--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -75,10 +75,12 @@ GPIO1-D0 (gpio1-24)为例：
 ```
 每组GPIO有32位：0-32
 A（0-7）B（8-15）C（16-23）D（24-31）
-PIN num = 32 * ( 2 - 1 ) + 24 = 56
+
 ```
 
 >从0开始为第一组
+>
+>PIN num = 32 * 1 + 24 = 56
 
 
 
