--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -8,7 +8,7 @@
 
 ![image-20241009150239258](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241009150239258.png)
 
-![K5_20PIN引脚定义](D:\Desktop\project\K5\K5_V1.1\K5_20PIN引脚定义.jpg)
+![K5_20PIN引脚定义](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/K5_20PIN引脚定义.jpg)
 
 ## K5Ck扩展引脚
 
