--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -82,7 +82,7 @@ GPIO1-D0  计算 Pin num = 32 * 1 + 24 = 56
 
 **步骤一**
 
-先将对应GPIO引脚注释，/sys/class/gpio/export 只能导入未注册的 gpio
+先将对应GPIO引脚注释，`/sys/class/gpio/export` 只能导入未注册的 gpio
 
 将设备树对应IO取消使能
 
@@ -141,6 +141,12 @@ value
 
 
 ### 用户层控制GPIO电平
+
+> 默认软件拓展引脚中配置为GPIO一般都注册为此方式控制
+>
+> 此方式可控制引脚输出高电平或低电平
+
+
 
 **查看GPIO注册列表**
 
