--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -176,7 +176,7 @@ $ echo 0 > /sys/class/leds/gpio3b6/brightness
 
 **开发板调试串口接线**
 
-调试串口内嵌到扩展40Pin引脚上，可通过扩展引脚章节 或下图查看调试串口位置
+调试串口内嵌到扩展40Pin引脚上，可通过[扩展引脚章节](#ExpansionPin) 或下图查看调试串口位置
 
 ![image-20231215153008926](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231215153008926.png)
 
