--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -178,6 +178,8 @@ $ echo 0 > /sys/class/leds/gpio3b6/brightness
 
 kickpi开发板调试串口一般内嵌到扩展引脚上，可通过[扩展引脚章节](#ExpansionPin) 查看对应的 DEBUG 引脚位置，一般命名为 `UART_RX_DEBUG`、`UART_TX_DEBUG`、`GND`。
 
+**调试串口线说明**
+
 
 
 **开发板调试串口接线**
