--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -343,7 +343,7 @@ system下，找到developer options
 
 > 版本：K2C
 
-KICKPI-K2C设计有1路485（/dev/ttyAS3）一路232(/dev/ttyAS4)
+KICKPI-K2C设计中可选配：1路485（/dev/ttyAS3）一路232(/dev/ttyAS4)
 
 ![1735098505539](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/1735098505539.jpg)
 
