--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -18,7 +18,9 @@
 
 ![image-20241227112959132](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241227112959132.png)
 
-
+带 * 号为输出软件默认配置功能
+UART0_RX /TX 默认配置串口调试
+TWI即I2C：TWI1_SCK/TWI1_SDA 等同 I2C_CLK/I2C_SDA
 
 ## 2. GPIO
 
