--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -300,7 +300,7 @@ wpa-conf /etc/wpa_supplicant.conf
 
 
 
-### SSH登录
+### SSH 登录
 
 ubuntu-server版系统默认安装了有SSH
 打开Windows cmd
@@ -311,7 +311,30 @@ ssh kickpi@<IP>   //密码 kickpi
 
 ### SSH root登陆
 
-SSH默认没有设置root登录
+默认不支持root连接，root连接需要配置
+
+```shell
+$ vim /etc/ssh/ssh_config
++ PermitRootLogin yes
+$ vim /etc/ssh/sshd_config
++ PermitRootLogin yes
+$ sudo /etc/init.d/ssh restart
+```
+
+注意事项：
+
+确保板子IP正常
+
+确保能正常连通板子的IP
+
+```
+$ cat /etc/ssh/ssh_config | grep PermitRootLogin
+PermitRootLogin yes
+$ cat /etc/ssh/sshd_config | grep PermitRootLogin
+PermitRootLogin yes
+```
+
+
 
 
 
