--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -939,6 +939,8 @@ $ echo A > /dev/watchdog
 
 ## 22. 4G通讯模块
 
+目前支持 EC
+
 ### 硬件连接方式
 
 ![image-20231215153217640](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231215153217640.png)
