--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -939,9 +939,7 @@ $ echo A > /dev/watchdog
 
 ## 22. 4G通讯模块
 
-目前支持 Quecte EC20、Quecte EC200M-CN
-
-
+目前适配支持 Quecte EC20、Quecte EC200M-CN 型号模块
 
 ### 硬件连接方式
 
