--- a/rk356x/zh/40-RK3568 LCD配置.md
+++ b/rk356x/zh/40-RK3568 LCD配置.md
@@ -33,14 +33,13 @@ RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系
 
 ### RK3588
 
-| 显示接口  | 显示最大分辨率 | 格式                                                         |
-| --------- | -------------- | ------------------------------------------------------------ |
-| RGB       | 1920x1080@60hz | 支持 BT.656/BT.1120                                          |
-| MIPI      | 3840x2160@60hz | 双 MIPI，支持 DSI v1.1，DCS v1.1， DPHY v2.0，<br/>CPHY V1.1 协议标准 |
-| Dual MIPI | 2560x1440@60Hz | RGB 8Bit                                                     |
-| LVDS      | 1280x800@60Hz  | RGB 8Bit                                                     |
-| EDP       | 2560x1600@60Hz | RGB 10Bit                                                    |
-| RGB       | 1920x1080@60Hz | 支持 BT.656/BT.1120                                          |
+| 显示接口 | 显示最大分辨率 | 格式                                                         |
+| -------- | -------------- | ------------------------------------------------------------ |
+| RGB      | 1920x1080@60hz | 支持 BT.656/BT.1120                                          |
+| MIPI     | 3840x2160@60hz | 双 MIPI，支持 DSI v1.1，DCS v1.1， DPHY v2.0，<br/>CPHY V1.1 协议标准 |
+| eDP0     | 2560x1440@60Hz | RGB 8Bit                                                     |
+| HDMI     | 1280x800@60Hz  | RGB 8Bit                                                     |
+| DP       | 2560x1600@60Hz | RGB 10Bit                                                    |
 
 
 
