--- a/rk356x/zh/40-RK3568 LCD配置.md
+++ b/rk356x/zh/40-RK3568 LCD配置.md
@@ -33,13 +33,13 @@ RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系
 
 ### RK3588
 
-| 显示接口 | 显示最大分辨率 | 格式                                                         |
-| -------- | -------------- | ------------------------------------------------------------ |
-| RGB      | 1920x1080@60hz | 支持 BT.656/BT.1120                                          |
-| MIPI     | 3840x2160@60hz | 双 MIPI，支持 DSI v1.1，DCS v1.1， DPHY v2.0，<br/>CPHY V1.1 协议标准 |
-| eDP0     | 2560x1440@60Hz | 双 eDP，支持 DP1.2a 和 eDP1.3 协议标准                       |
-| HDMI     | 1280x800@60Hz  | 双 HDMI，支持 HDMI 2.1 协议标准                              |
-| DP       | 2560x1600@60Hz | 双 DP，支持 DP1.4 协议标准                                   |
+| 显示接口 | 显示最大分辨率 | 协议标准                                       |
+| -------- | -------------- | ---------------------------------------------- |
+| RGB      | 1920x1080@60hz | BT.656/BT.1120                                 |
+| MIPI     | 3840x2160@60hz | DSI v1.1，DCS v1.1， DPHY v2.0，<br/>CPHY V1.1 |
+| eDP0     | 2560x1440@60Hz | DP1.2a 和 eDP1.3                               |
+| HDMI     | 1280x800@60Hz  | HDMI 2.1                                       |
+| DP       | 2560x1600@60Hz | DP1.4                                          |
 
 
 
