--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1393,3 +1393,11 @@ RX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ 
 
 * PCI-E X4 接口接法
 
+![image-20250103184238105](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250103184238105.png)
+
+
+
+> 已测试 PCIE to USB 3.0 模块，PCIE to SSD 模块。
+
+
+
