--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -82,7 +82,7 @@ index a5fa88c88..67fb67b5b 100755
 
 AW-IMAGE SDK替换指定rootfs.img说明
 
-```
+```diff
 $ vim scripts/debootstrap.sh
 
 @@ -612,6 +612,12 @@ create_image()
