--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -75,7 +75,13 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 ### 普通串口使用
 
+测试 UART8
 
+```
+ $ microcom -s 115200 /dev/ttyS8
+```
+
+> ctrl + ] 退出
 
 
 
@@ -601,9 +607,211 @@ $ source /rockchip-test/chromium/test_chromium_with_video.sh
 
 
 
+## CAN
+
+**查询CAN设备**
+
+```
+$ ifconfig -a
+...
+can0      Link encap:UNSPEC    Driver rk3576_canfd
+          NOARP  MTU:16  Metric:1
+          RX packets:0 errors:0 dropped:0 overruns:0 frame:0 
+          TX packets:0 errors:0 dropped:0 overruns:0 carrier:0 
+          collisions:0 txqueuelen:10 
+          RX bytes:0 TX bytes:0 
+          Interrupt:63 
+...
+```
 
 
 
+**CAN启动**
+
+启动CAN
+
+```
+$ ip link set can0 up
+```
+
+关闭CAN
+
+```
+$ ip link set can0 down
+```
+
+设置⽐特率500KHz
+
+```
+$ ip link set can0 type can bitrate 500000
+```
+
+打印can0信息
+
+```
+$ ip -details -statistics link show can0
+```
+
+
+
+**CAN发送**
+
+发送（标准帧,数据帧,ID:123,date:DEADBEEF）:
+
+```
+$ cansend can0 123#DEADBEEF
+```
+
+发送（标准帧,远程帧,ID:123）
+
+```
+$ cansend can0 123#R
+```
+
+发送（扩展帧,数据帧,ID:00000123,date:DEADBEEF）:
+
+```
+$ cansend can0 00000123#12345678
+```
+
+发送（扩展帧,远程帧,ID:00000123）
+
+```
+$ cansend can0 00000123#R
+```
+
+
+
+**CAN接收**
+
+开启打印，等待接收
+
+```
+$ candump can0
+```
+
+
+
+**回环模式测试**
+
+启动can后，io输⼊命令开启回环⾃测（基地址根据实际dts启动的can配置）
+
+```
+$ io -4 0x2ac00000 0x8415
+```
+
+>2ac00000 为 K7 CAN0 的 dts 节点
+>
+>可查看dts节点
+>
+>find /sys/devices/platform/ | grep can0 | grep uevent
+>
+>/sys/devices/platform/2ac00000.can/net/can0/uevent
+
+
+
+回环模式下，cansend 后 candump 可以接收。
+
+
+
+**示例**
+
+- 终端1
+
+开启回环模式测试，并监听 can
+
+```
+root@linaro-alip:/# io -4 0xfea60000 0x8415
+root@linaro-alip:/# candump can0
+  can0  123   [4]  DE AD BE EF
+```
+
+
+
+- 终端2
+
+发送命令
+
+```
+root@linaro-alip:/# cansend can0 123#DEADBEEF
+```
+
+
+
+## PWM
+
+Extend 40Pin 接口 包含多路PWM
+
+pwmX_Ych_Z，X 表示控制器 id ，Y 表示当前控制器支持的通道总数，Z 表示通道 id 。
+
+PWM 框架在 /sys/class/pwm/ 目录下提供了用户层接口，详见 drivers/pwm/sysfs.c，PWM 驱动加载成功后，会在其下生成 pwmchipX 目录，如 pwmchip0、pwmchip1 等，此处的 X 与 PWM 的控制器或通道 id 无关，仅与 PWM 设备的 probe 顺序有关。
+
+
+
+* dts 打开节点
+
+```
+&pwm2_8ch_6 {
+	pinctrl-0 = <&pwm2m2_ch6>;
+	status = "okay";
+};
+
+&pwm2_8ch_7 {
+	pinctrl-0 = <&pwm2m2_ch7>;
+	status = "okay";
+};
+
+&pwm0_2ch_1 {
+	pinctrl-0 = <&pwm0m0_ch1>;
+	status = "okay";
+};
+```
+
+
+
+* 确认 pwmchip 对应的 pwm
+
+列举相关pwm节点
+
+```
+$ ls /sys/class/pwm/
+pwmchip0  pwmchip1  pwmchip2  pwmchip3
+```
+
+可查看对应pwm dts节点
+
+```
+$ cat /sys/class/pwm/pwmchip0/device/uevent | grep FULLNAME
+OF_FULLNAME=/pwm@27331000
+```
+
+>从 dts 确认对应的节点 
+>
+>pwm0_2ch_1: pwm@27331000
+>
+>pwm2_8ch_6: pwm@2ade6000
+>
+>pwm2_8ch_7: pwm@2ade7000
+>
+>更多详见：kernel-6.1/arch/arm64/boot/dts/rockchip/rk3576.dtsi
+
+
+
+* 配置PWM通道
+
+示例：设置 PWM0_CH1 通道，周期10000ns，占空比5000ns，极性为normal
+
+根据上述信息可知，pwm0_ch1_m0 配置 dts 为 pwm0_2ch_1，即 pwmchip0
+
+```
+$ echo 0 > /sys/class/pwm/pwmchip0/export
+$ echo 10000 > /sys/class/pwm/pwmchip0/pwm0/period
+$ echo 5000 > /sys/class/pwm/pwmchip0/pwm0/duty_cycle
+$ echo normal > /sys/class/pwm/pwmchip0/pwm0/polarity
+$ echo 1 > /sys/class/pwm/pwmchip0/pwm0/enable
+```
+
+> 按照示例配置参数设置成功后，可用万用表测量PWM3引脚，正确电压应为1.6V左右
 
 
 
