--- a/rk3576/zh/14-硬件老化测试.md
+++ b/rk3576/zh/14-硬件老化测试.md
@@ -6,6 +6,40 @@
 
 
 
+## **StressTest**
+
+设备上使用Stresstest 工具，对待测设备的各项功能进行压力测试，确保整个系统运行的稳定性。SDK
+
+通过打开计算器应用，输入 “83991906=” 暗码，可启动StressTest应用，进行各功能压力测试。
+
+Stresstest 测试工具测试的内容主要包括：
+
+**模块相关**
+
+Camera 压力测试：包括Camera 打开关闭，Camera 拍照以及Camera 切换。
+
+Bluetooth 压力测试：包括Bluetooth 打开关闭。
+
+Wi-Fi 压力测试： 包括Wi-Fi 打开关闭，（ ping 测试以及iperf 测试待加入）。
+
+**非模块相关**
+
+飞行模式开关测试
+
+休眠唤醒拷机测试
+
+视频拷机测试
+
+重启拷机测试
+
+恢复出厂设置拷机测试
+
+Arm 变频测试
+
+Gpu 变频测试
+
+DDR 变频测试
+
 
 
 ## 拷贝VPU测试视频
