--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -643,7 +643,7 @@ $ ip link set can0 down
 设置⽐特率500KHz
 
 ```
-$ ip link set can0 type can bitrate 500000
+$ ip link set can0 type can bitrate 1000000 dbitrate 3000000 fd on
 ```
 
 打印can0信息
