--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -628,12 +628,6 @@ can0      Link encap:UNSPEC    Driver rk3576_canfd
 
 **CAN启动**
 
-启动CAN
-
-```
-$ ip link set can0 up
-```
-
 关闭CAN
 
 ```
@@ -649,8 +643,16 @@ $ ip link set can0 type can bitrate 1000000 dbitrate 3000000 fd on
 打印can0信息
 
 ```
-$ ip -details -statistics link show can0
+$ ip -details link show can0
 ```
+
+启动CAN
+
+```
+$ ip link set can0 up
+```
+
+
 
 
 
