--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -668,7 +668,7 @@ $ cansend can0 123#DEADBEEF
 $ cansend can0 123#R
 ```
 
-发送（扩展帧,数据帧,ID:00000123,date:DEADBEEF）:
+发送（扩展帧,数据帧,ID:00000123,date:DEADBEEF）
 
 ```
 $ cansend can0 00000123#12345678
