--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -694,6 +694,12 @@ $ candump can0
 
 **回环模式测试**
 
+```
+$ ip link set can0 type can bitrate 500000 sample-point 0.8 dbitrate 2000000 sample-point 0.8 fd on loopback on
+```
+
+
+
 启动can后，io输⼊命令开启回环⾃测（基地址根据实际dts启动的can配置）
 
 ```
