--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1222,6 +1222,8 @@ $ ifconfig <dev> up
 
 ## 26. CAN
 
+K7 支持 CAN FD标准，CAN FD继承了CAN的绝大多数特性，如同样的物理层，双线[串行通信协议](https://zhida.zhihu.com/search?content_id=239082283&content_type=Article&match_order=1&q=串行通信协议&zhida_source=entity)，基于非破坏性仲裁技术，分布式实时控制，可靠的错误处理和检测机制等，同时CAN FD弥补了CAN在总线带宽和数据长度方面的不足。
+
 **CAN** 常⽤命令接口
 
 **查询当前⽹络设备**
@@ -1232,21 +1234,21 @@ $ ifconfig -a
 
 
 
-**CAN启动**
+**CAN FD启动**
 
-关闭CAN:
+关闭CAN
 
 ```
 $ ip link set can0 down
 ```
 
-设置⽐特率500KHz:
+设置仲裁段1M波特率，数据段3M波特率
 
 ```
 $ ip link set can0 type can bitrate 500000
 ```
 
-打印can0信息:
+打印can0信息
 
 ```
 $ ip -details -statistics link show can0
@@ -1260,7 +1262,7 @@ $ ip link set can0 up
 
 
 
-**CAN发送**
+**CAN FD发送**
 
 发送（标准帧,数据帧,ID:123,date:DEADBEEF）:
 
@@ -1268,22 +1270,10 @@ $ ip link set can0 up
 $ cansend can0 123#DEADBEEF
 ```
 
-发送（标准帧,远程帧,ID:123）
+发送（扩展帧,数据帧,ID:00000123,date:DEADBEEF）
 
 ```
-$ cansend can0 123#R
-```
-
-发送（扩展帧,数据帧,ID:00000123,date:DEADBEEF）:
-
-```
-$ cansend can0 00000123#12345678
-```
-
-发送（扩展帧,远程帧,ID:00000123）
-
-```
-$ cansend can0 00000123#R
+$ cansend can0 00000123##1DEADBEEF
 ```
 
 
