--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -609,7 +609,7 @@ $ source /rockchip-test/chromium/test_chromium_with_video.sh
 
 ## CAN
 
-K7 支持 CAN FD标准，CAN FD继承了CAN的绝大多数特性，如同样的物理层，双线[串行通信协议](https://zhida.zhihu.com/search?content_id=239082283&content_type=Article&match_order=1&q=串行通信协议&zhida_source=entity)，基于非破坏性仲裁技术，分布式实时控制，可靠的错误处理和检测机制等，同时CAN FD弥补了CAN在总线带宽和数据长度方面的不足。
+支持 CAN FD标准，CAN FD继承了CAN的绝大多数特性，如同样的物理层，双线[串行通信协议](https://zhida.zhihu.com/search?content_id=239082283&content_type=Article&match_order=1&q=串行通信协议&zhida_source=entity)，基于非破坏性仲裁技术，分布式实时控制，可靠的错误处理和检测机制等，同时CAN FD弥补了CAN在总线带宽和数据长度方面的不足。
 
 **查询当前网络设备**
 
@@ -636,7 +636,7 @@ can0      Link encap:UNSPEC    Driver rk3576_canfd
 $ ip link set can0 down
 ```
 
-设置⽐特率500KHz
+设置仲裁段1M波特率，数据段3M波特率
 
 ```
 $ ip link set can0 type can bitrate 1000000 dbitrate 3000000 fd on
