--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -696,8 +696,10 @@ $ candump can0
 
 **回环模式测试**
 
+启动can后，io输入命令开启回环自测（基地址根据实际dts启动的can配置）
+
 ```
-$ ip link set can0 type can bitrate 500000 sample-point 0.8 dbitrate 2000000 sample-point 0.8 fd on loopback on
+$ io -4 0xfe580000 0x8415
 ```
 
 
