--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -706,7 +706,7 @@ $ io -4 0x****** 0x8415
 $ io -4 0x2ac00000 0x8415
 ```
 
->2ac00000 为 K7 CAN0 的 dts 节点
+>2ac00000 为 CAN0 的 dts 节点
 >
 >可查看dts节点
 >
