--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1240,7 +1240,7 @@ $ ifconfig -a
 $ ip link set can0 down
 ```
 
-设置仲裁段1M波特率，数据段3M波特率
+设置比特率500KHz
 
 ```
 $ ip link set can0 type can bitrate 500000
