--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1268,10 +1268,10 @@ $ ip link set can0 up
 $ cansend can0 123#DEADBEEF
 ```
 
-发送（扩展帧,数据帧,ID:00000123,date:DEADBEEF）
+发送（标准帧,远程帧,ID:123）
 
 ```
-$ cansend can0 00000123##1DEADBEEF
+$ cansend can0 123#R
 ```
 
 
