--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -821,3 +821,46 @@ $ echo 1 > /sys/class/pwm/pwmchip0/pwm0/enable
 
 
 
+## SPI
+
+**工具位置**
+
+```
+$ kernel/tools/spi/spidev_test.c
+```
+
+
+
+**编译**
+
+```
+$ make CROSS_COMPILE=~/path-to-toolchain/gcc-xxxxx-toolchain/bin/xxxx-linux-gnu-
+```
+
+> 选择 kernel 所⽤ CROSS_COMPILE
+
+
+
+**回环模式测试**
+
+```
+$ spidev_test -D /dev/spidev0.0 -v -l -p "hello"
+```
+
+> 主控做 Master 端
+>
+> MISO、MOSI 进行短接
+
+
+
+- 示例
+
+```
+root@linaro-alip:/data# ./spidev_test -D /dev/spidev0.0 -v -l -p "hello"
+spi mode: 0x24
+bits per word: 8
+max speed: 500000 Hz (500 kHz)
+TX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __  |hello|
+RX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __  |hello|
+```
+
