--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -636,7 +636,7 @@ can0      Link encap:UNSPEC    Driver rk3576_canfd
 $ ip link set can0 down
 ```
 
-设置比特率500KHz
+设置仲裁段1M波特率，数据段3M波特率
 
 ```
 $ ip link set can0 type can bitrate 1000000 dbitrate 3000000 fd on
