--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -658,28 +658,16 @@ $ ip link set can0 up
 
 **CAN发送**
 
-发送（标准帧,数据帧,ID:123,date:DEADBEEF）:
+发送（标准帧,数据帧,ID:123,date:DEADBEEF）
 
 ```
 $ cansend can0 123#DEADBEEF
 ```
 
-发送（标准帧,远程帧,ID:123）
-
-```
-$ cansend can0 123#R
-```
-
 发送（扩展帧,数据帧,ID:00000123,date:DEADBEEF）
 
 ```
-$ cansend can0 00000123#12345678
-```
-
-发送（扩展帧,远程帧,ID:00000123）
-
-```
-$ cansend can0 00000123#R
+$ cansend can0 00000123##1DEADBEEF
 ```
 
 
