--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -687,7 +687,12 @@ $ candump can0
 启动can后，io输入命令开启回环自测（基地址根据实际dts启动的can配置）
 
 ```
-$ io -4 0x****** 0x8415
+$ ip link set can0 down
+$ ip link set can0 type can bitrate 500000 sample-point 0.8 dbitrate 2000000 sample-point 0.8 fd on loopback on
+$ ip -details -statistics link show can0
+$ ip link set can0 up
+$ echo 4096 > /sys/class/net/can0/tx_queue_len
+$ candump can0 &
 ```
 
 ```
