--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -684,8 +684,6 @@ $ candump can0
 
 **回环模式测试**
 
-启动can后，io输入命令开启回环自测（基地址根据实际dts启动的can配置）
-
 ```
 $ ip link set can0 down
 $ ip link set can0 type can bitrate 500000 sample-point 0.8 dbitrate 2000000 sample-point 0.8 fd on loopback on
@@ -695,45 +693,7 @@ $ echo 4096 > /sys/class/net/can0/tx_queue_len
 $ candump can0 &
 ```
 
-```
-$ io -4 0x2ac00000 0x8415
-```
-
->2ac00000 为 CAN0 的 dts 节点
->
->可查看dts节点
->
->find /sys/devices/platform/ | grep can0 | grep uevent
->
->/sys/devices/platform/2ac00000.can/net/can0/uevent
-
-
-
-回环模式下，cansend 后 candump 可以接收。
-
-
-
-**示例**
-
-- 终端1
-
-开启回环模式测试，并监听 can
-
-```
-root@linaro-alip:/# io -4 0xfea60000 0x8415
-root@linaro-alip:/# candump can0
-  can0  123   [4]  DE AD BE EF
-```
-
-
-
-- 终端2
-
-发送命令
-
-```
-root@linaro-alip:/# cansend can0 123#DEADBEEF
-```
+回环模式下，cansend后candump可以接收，说明控制器工作正常。
 
 
 
