--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -16,7 +16,7 @@
 
 开发板配备20Pin扩展引脚，其中包含普通GPIO、I2C、UART、SPI等接口。
 
-![image-20241227112959132](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241227112959132.png)
+![K2B详情页_09](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/K2B详情页_09.jpg)
 
 带 * 号为输出软件默认配置功能
 UART0_RX /TX 默认配置串口调试
