--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -796,6 +796,15 @@ $ make CROSS_COMPILE=~/path-to-toolchain/gcc-xxxxx-toolchain/bin/xxxx-linux-gnu-
 
 **回环模式测试**
 
+查看设备节点
+
+```
+$ ls /dev/spi*
+/dev/spidev4.0
+```
+
+指定设备进行测试
+
 ```
 $ spidev_test -D /dev/spidev4.0 -v -l -p "hello"
 ```
