--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -796,7 +796,7 @@ $ make CROSS_COMPILE=~/path-to-toolchain/gcc-xxxxx-toolchain/bin/xxxx-linux-gnu-
 
 **回环模式测试**
 
-查看设备节点
+列出spi设备节点
 
 ```
 $ ls /dev/spi*
