--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -85,7 +85,7 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 
 
-## 引脚控制 Pinctrl 
+## Pinctrl 引脚控制  
 
 Rockchip Pin的ID按照 控制器(bank)+端口(port)+索引序号(pin) 组成。
 
