--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -23,16 +23,8 @@ Windows烧写工具：
 网盘中路径：
 
 ```
-5-DevelopmentTool/AndroidTool/
+5-DevelopmentTool/
 ```
-
-源码中路径：
-
-```
-（sdk）/RKTools/windows/AndroidTool/
-```
-
-下文 AndroidTool 都指代这个路径
 
 
 
@@ -41,7 +33,7 @@ Windows烧写工具：
 **USB驱动路径**
 
 ```
-AndroidTool/DriverAssitant_v5.13.zip
+5-DevelopmentTool/DriverAssitant_v5.13.zip
 ```
 
 将 DriverAssitant_v5.13.zip 解压，打开解压后的文件夹
