--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -142,5 +142,5 @@ MASKROM模式：不可分区烧录
 5-DevelopmentTool开发工具/FactoryTool_v1.89.zip
 ```
 
-
+![image-20250109172029374](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250109172029374.png)
 
