--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -141,6 +141,10 @@ MASKROM模式：不可分区烧录
 ```
 5-DevelopmentTool开发工具/FactoryTool_v1.89.zip
 ```
+打开软件
 
-![image-20250109172029374](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250109172029374.png)
+![image-20250109172029374](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250109172029374.png)
 
+选择固件，进行烧录，接入主板后，使主板进入MASKROM/LOADER模式
+
+![image-20250109172203575](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250109172203575.png)
