--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -230,7 +230,7 @@ eth0 / eth1 (1000M x 2)
 
 **信号出现感叹号问题**
 
-![image-20241127174458223](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20241127174458223.png)
+![image-20241127174458223](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241127174458223.png)
 
 原生谷歌会向服务器 captive_portal_server 发送请求，根据判断网络是否可用
 
