--- a/rk3576/zh/.~11-SDK源码编译.md
+++ b/rk3576/zh/.~11-SDK源码编译.md
@@ -141,7 +141,7 @@ rockdev/Image-rk3576_u/
 ├── super.img
 ├── uboot.img
 ├── update.img
-├── update-rk3576-kickpi-k7-android-202501101427.img
+├── update-rk3576-kickpi-k7-android-*.img
 └── vbmeta.img
 ```
 
