--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -6,9 +6,37 @@
 
 
 
+
+
+
+
 ## LED
 
-**用户层控制LED状态**
+开发板配备2个LED，绿色LED为电源指示灯，上电默认长亮
+
+蓝色LED为系统工作心跳灯。若心跳灯持续闪烁，则表示内核正常运行。
+
+另外，系统工作心跳灯可参考以下方面控制LED作为其他功能。
+
+### 用户层控制LED状态
+
+**命令行控制LED状态**
+
+默认LED触发方式为heartbeat，此方式下LED状态不可人为控制。
+
+若想要实现命令控制LED状态的话，可通过以下命令设置为none，然后再设置LED的brightness
+
+```bash
+$ echo none > /sys/class/leds/work-led/trigger
+$ echo 1 > /sys/class/leds/work-led/brightness
+$ echo 0 > /sys/class/leds/work-led/brightness
+```
+
+恢复心跳模式
+
+```
+$ echo heartbeat > /sys/class/leds/work-led/trigger
+```
 
 
 
