--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -44,9 +44,8 @@ $ echo heartbeat > /sys/class/leds/work/trigger
 
 ```
 $ ls /sys/class/leds/
-fan       GPIO3_D4  GPIO4_A6  GPIO4_C6  GPIO4_D1    SDMMC0_PWREN
-GPIO2_D6  GPIO3_D5  GPIO4_B0  GPIO4_C7  mmc2::      work
-GPIO2_D7  GPIO4_A4  GPIO4_B1  GPIO4_D0  PCIE_PWREN
+GPIO0_A5  GPIO3_D4  GPIO4_D1    SDMMC0_PWREN  mmc2::
+GPIO3_B0  GPIO3_D5  PCIE_PWREN  fan           work
 ```
 
 **控制GPIO输出电平状态**
