--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -52,10 +52,10 @@ GPIO3_B0  GPIO3_D5  PCIE_PWREN  fan           work
 
 ```
 // GPIO3_D4 输出高电平
-echo 1 >  /sys/class/leds/GPIO3_D4/brightness
+$ echo 1 >  /sys/class/leds/GPIO3_D4/brightness
 
 // GPIO3_D4 输出低电平
-echo 0 >  /sys/class/leds/GPIO3_D4/brightness
+$ echo 0 >  /sys/class/leds/GPIO3_D4/brightness
 ```
 
 
